--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/global.css",
+    "css": "assets/global.css",
     "baseColor": "stone",
     "cssVariables": true
   },
