--- a/apps/search/package.json
+++ b/apps/search/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview --port 5001 --strictPort"
   },
   "dependencies": {
+    "@mf-kahve/ui": "workspace:^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
