--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -7,9 +7,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+    
+
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20.5.0
+
+    - uses: actions/cache@v2
         with:
           path: deploy
           key: ${{ runner.os }}-deploy-${{ hashFiles('**/pnpm-lock.yaml') }}
