--- a/.github/workflows/composer.yaml
+++ b/.github/workflows/composer.yaml
@@ -43,12 +43,12 @@ jobs:
         run: |
           pnpm install --frozen-lockfile
 
-      - uses: jsmrcaga/action-netlify-deploy@v2.0.0
-        working-directory: apps/composer
+      - name: Build
+        uses: jsmrcaga/action-netlify-deploy@v2.0.0
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_DEPLOY_MESSAGE: "Deployed from GitHub Actions - Composer App"
           NETLIFY_DEPLOY_TO_PROD: true
           build_command: "pnpm run build"
-          build_directory: "dist"
+          build_directory: "apps/composer/dist"
