--- a/.github/workflows/composer.yaml
+++ b/.github/workflows/composer.yaml
@@ -21,10 +21,10 @@ jobs:
           node-version: 20.5.0
 
       - uses: pnpm/action-setup@v2
+        name: Install pnpm
         with:
           version: 8
-          run_install: |
-            - recursive: true
+          run_install: false
 
       - name: Get pnpm store directory
         shell: bash
