--- a/.github/workflows/composer.yaml
+++ b/.github/workflows/composer.yaml
@@ -23,10 +23,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'pnpm'
-    - name: Install dependencies
-      run: pnpm install --frozen-lockfile
-
+        
     - name: Build
       run: |
-        pnpm run build:composer
-        
+        pnpm install --frozen-lockfile
+        cd apps/composer
+        pnpm run build
+      
