--- a/.github/workflows/composer.yaml
+++ b/.github/workflows/composer.yaml
@@ -26,7 +26,7 @@ jobs:
         
     - name: Build
       run: |
-        pnpm install --frozen-lockfile
+        pnpm install --frozen-lockfile -r
         cd apps/composer
         pnpm run build
       
