--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
   "name": "@mf-kahve/ui",
   "version": "0.0.0",
   "type": "module",
+  "private": false,
   "scripts": {
     "build": "tsc && vite build ",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
