--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,8 @@ server {
   server_name localhost;
 
   location / {
+    # may you consider it
+    expires 2h;
     root /usr/share/nginx/html;
     index index.html;
     try_files $uri $uri/ /index.html;
