--- a/apps/list/package.json
+++ b/apps/list/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "list",
+  "name": "@mf-kahve/list",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite  --port 3001 --strictPort",
     "build": "tsc && vite build",
+    "build:watch": "tsc && vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3001 --strictPort"
   },
   "dependencies": {
     "react": "^18.2.0",
