--- a/apps/search/package.json
+++ b/apps/search/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "search",
+  "name": "@mf-kahve/search",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite  --port 5001 --strictPort",
+    "dev": "vite  --port 3002 --strictPort",
     "build": "tsc && vite build",
+    "build:watch": "tsc && vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview --port 5001 --strictPort"
+    "preview": "vite preview --port 3002 --strictPort"
   },
   "dependencies": {
-    "@mf-kahve/ui": "workspace:^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
