chore: suffix for mfes

--- a/apps/search/package.json
+++ b/apps/search/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mf-kahve/search",
+  "name": "@mf-kahve/search-mf",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@mf-kahve/ui": "workspace:*",
     "@originjs/vite-plugin-federation": "^1.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
