keep update the experiment

--- a/apps/cart/package.json
+++ b/apps/cart/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@mf-kahve/ui": "workspace:*",
     "@originjs/vite-plugin-federation": "^1.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -25,6 +27,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
