--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "pnpm run --filter @mf-kahve/* build",
     "build:watch": "pnpm run --filter @mf-kahve/*-mf build:watch",
     "preview:watch": "pnpm run --filter @mf-kahve/*-mf preview",
-    "dev": "concurrently --kill-others \"pnpm run preview:watch\" \"pnpm run build:watch\" \"pnpm run --filter \"composer\" dev\"",
+    "start:bff": "pnpm run --filter @mf-kahve/bff start",
+    "dev": "concurrently --kill-others \"pnpm run preview:watch\" \"pnpm run build:watch\" \"pnpm run --filter \"composer\" dev\" \"pnpm run start:bff\"",
     "changeset-publish": "changeset publish",
     "changeset-tag": "changeset tag",
     "ci:version": "pnpm changelog && pnpx changeset version && pnpm install --no-frozen-lockfile && git add .",
