--- a/apps/list/package.json
+++ b/apps/list/package.json
@@ -11,8 +11,12 @@
     "preview": "vite preview --port 3001 --strictPort"
   },
   "dependencies": {
+    "@mf-kahve/core": "workspace:^",
+    "@mf-kahve/ui": "workspace:*",
+    "@tanstack/react-query": "^5.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.2.3",
