--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,17 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "module": "./dist/core.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
+    "dev": "vite",
     "build": "tsc && vite build",
-    "build:watch": "tsc && vite build --watch",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "build:watch": "tsc && vite build --watch"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.45.0",
+    "@types/node": "^20.5.9",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.3"
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.7.2"
   }
 }
